--- a/AUTHORS
+++ b/AUTHORS
@@ -2,8 +2,7 @@ WiperDog is developped by following people
 
 Core members
 # Name	Organization	Contact
-Hiroyoshi Kurohara	Insight-technology,inc.	hkurohar@insight-tec.co.jp,kurohara@yk.rim.or.jp
+Hiroyoshi Kurohara	Insight-technology,inc.
 
-... To: Insight and Luvina menbers, please insert you names here...
 
 Contributors
