--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,17 @@
 WiperDog is developped by following people
-
 Core members
 # Name	Organization	Contact
 Hiroyoshi Kurohara	Insight-technology,inc.
-
-
+Do Thi Huong  Luvina Software,inc. 
+Le minh quan
+Nguyen Xuan Luong
+Pham Tien Thanh
+Nguyen Van Nghia
+Mai Xuan Thanh
+Kiyomi Takebayashi
+Masanori Ichikawa
+Hiromu Sato
+Rie Ota
+Kenichi Shibamoto
+#
 Contributors
