fixed company name(just testing)

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@ WiperDog is developped by following people
 Core members
 # Name	Organization	Contact
 Hiroyoshi Kurohara	Insight-technology,inc.
-Do Thi Huong  Luvina Software,inc. 
+Do Thi Huong  Luvina Software JSC
 Le minh quan
 Nguyen Xuan Luong
 Pham Tien Thanh
