added organization he/she belongs to

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,17 +1,17 @@
 WiperDog is developped by following people
 Core members
-# Name	Organization	Contact
-Hiroyoshi Kurohara	Insight-technology,inc.
-Do Thi Huong  Luvina Software JSC
-Le minh quan
-Nguyen Xuan Luong
-Pham Tien Thanh
-Nguyen Van Nghia
-Mai Xuan Thanh
+# Name	| Organization	| Contact
+Hiroyoshi Kurohara      | Insight-technology,inc.
+Do Thi Huong            | Luvina Software JSC
+Le minh quan            | Luvina Software JSC
+Nguyen Xuan Luong       | Luvina Software JSC
+Pham Tien Thanh         | Luvina Software JSC
+Nguyen Van Nghia        | Luvina Software JSC
+Mai Xuan Thanh          | Luvina Software JSC
 Kiyomi Takebayashi
-Masanori Ichikawa
-Hiromu Sato
-Rie Ota
-Kenichi Shibamoto
+Masanori Ichikawa       | Insight-technology,inc.
+Hiromu Sato             | Insight-technology,inc.
+Rie Ota                 | Insight-technology,inc.
+Kenichi Shibamoto       | Insight-technology,inc.
 #
 Contributors
